<resources>
    <string name="app_name">Kebab Cebanc</string>
    <string name="btnEmpezar">Empezar</string>
    <string name="lblTitulo">Kebab Cebanc</string>
    <string name="lblLocalizacion">Como llegar : </string>
    <string name="btnMaps">Maps</string>
    <string name="lblContacto">Contacto :</string>
    <string name="btncontacto">Contacto</string>
    <string name="nom">Introduce tu nombre</string>
    <string name="ape">Introduce tus apellidos</string>
    <string name="direc">Introduce tu direccion</string>
    <string name="cp">Codigo Postal</string>
    <string name="email">Direccion de correo</string>
    <string name="salir">Salir</string>
    <string name="atras">Atras</string>
    <string name="siguiente">Siguiente</string>
    <string name="tel">Telefono</string>
    <string name="canti">Introduce Cantidad</string>
    <string name="btnAñadir">Añadir</string>
    <string name="lblPista">Cuantos menus quieres?</string>
    <string name="Aceptar">Aceptar</string>
    <string name="lblPedido">Resumen del pedido</string>
    <string name="rdbtarjeta">T.Credito</string>
    <string name="rdbContado">Contado</string>
    <string name="lbltarjeta">NºTarjeta</string>
    <string name="tarjehint">Introduzca el numero de tarjeta</string>
    <string name="FechaHint">Introduzca la fecha de caducidad</string>
    <string name="lbldigitos">3 Digitos</string>
    <string name="digitosHint">Introduzca los 3 digitos de atras</string>
    <string name="fechac">Fecha expiración</string>
    <string name="agradecer">Gracias por realizar su compra.</string>
    <string name="btnMenuPrincipal">Menu Principal</string>
    <string name="title_activity_maps">Map</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lblUsuario">Usuario:</string>
    <string name="lblPass">Contraseña</string>
</resources>
