<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:text="Nombre:"
            android:textColor="@android:color/white"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/nom"
            android:background="@android:color/white"
            android:id="@+id/txtNombre"
            android:layout_weight="2.87" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:text="Apellidos:"
            android:textColor="@android:color/white"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/ape"
            android:background="@android:color/white"
            android:id="@+id/txtApellido"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:text="Direccion:"
            android:textColor="@android:color/white"/>
        <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/direc"
            android:inputType="textPostalAddress"
            android:background="@android:color/white"
            android:id="@+id/txtDireccion"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:text="Telefono:"
            android:textColor="@android:color/white"/>
        <EditText
            android:layout_width="250sp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/tel"
            android:inputType="phone"
            android:background="@android:color/white"
            android:id="@+id/txtTelefono"
            android:maxLength="9"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="75sp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15sp"
            android:layout_marginTop="15sp"
            android:text="Código Postal:"
            android:textColor="@android:color/white"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:hint="@string/cp"
            android:inputType="number"
            android:background="@android:color/white"
            android:id="@+id/txtCP"
            android:layout_weight="1.83"
            android:maxLength="5"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250sp"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:id="@+id/btnsalir"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/atras"
            android:id="@+id/btnatras"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente"
            android:id="@+id/btnsiguiente"/>
    </LinearLayout>
</LinearLayout>