<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="21"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.ejemplos.kebab.MainActivity"
    android:background="@android:color/background_dark">

    <TextView
        android:text="@string/lblTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/lblKebabJuacbar"
        android:textSize="@android:dimen/app_icon_size"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/background_light"
        android:layout_weight="6"/>

    <ImageView
        android:layout_width="191dp"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/cebanc"
        android:id="@+id/imageView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/lblKebabJuacbar"
        android:layout_above="@+id/btnEmpezar"
        android:layout_weight="12"/>

    <Button
        android:text="@string/btnEmpezar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnEmpezar"
        tools:ignore="HardcodedText"
        android:layout_marginBottom="33dp"
        android:layout_above="@+id/btnMaps"
        android:layout_centerHorizontal="true"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/lblContacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblContacto"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/lblLocalizacion"
            android:layout_marginBottom="12dp" />

        <Button
            android:text="@string/btncontacto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/btnMaps"
            android:id="@+id/btnContacto" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/lblLocalizacion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/lblLocalizacion"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>

        <Button
            android:text="@string/btnMaps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnMaps"
            android:layout_alignBaseline="@+id/lblLocalizacion"
            android:layout_alignBottom="@+id/lblLocalizacion"
            android:layout_toEndOf="@+id/lblLocalizacion" />
    </LinearLayout>
</LinearLayout>
