<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_weight="10">


    <TextView
        android:id="@+id/agrad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15sp"
        android:text="@string/agradecer"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/imgRegalo1"
            android:layout_width="133dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/munequito" />

        <ImageView
            android:id="@+id/imgRegalo2"
            android:layout_width="129dp"
            android:layout_height="match_parent"
            app:srcCompat="@mipmap/vale" />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textoRegalo"
        android:textColor="@android:color/white"
        android:textSize="25sp"
        android:layout_weight="3"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir"
            android:id="@+id/btnsalir"
            style="@android:style/Widget.Button.Inset" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnMenuPrincipal"
            android:id="@+id/btnmenuprincipal"
            style="@android:style/Widget.Button.Inset"/>
    </LinearLayout>
</LinearLayout>