<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:weightSum="134">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_weight="3"
        android:gravity="center_horizontal">

        <Spinner
            android:id="@+id/spnTipoKebab"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:background="@android:drawable/spinner_background"
            android:gravity="start"
            android:spinnerMode="dialog" />

    </LinearLayout>

    <TextView
        android:id="@+id/precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:textColor="@android:color/black"
        android:text="PruebaPRueba"
        android:fontFamily="casual" />

    <ImageView
        android:id="@+id/imagenPedido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="121"
        android:scaleType="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center">

        <Button
            android:id="@+id/btnsalir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salir" />

        <Button
            android:id="@+id/btnAñadir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnAñadir" />

        <Button
            android:id="@+id/btnsiguiente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/siguiente" />

    </LinearLayout>


</LinearLayout>